syntax = "proto3";

package sfc_identity;

import "Models/User/user.proto";

option csharp_namespace = "SFC.Identity.Contracts.Messages.User.Get";

message GetUserResponse {
  User user = 1;
}
